--- a/force-app/main/default/lwc/eMS_LM_LeaveApproveRejectScreen/eMS_LM_LeaveApproveRejectScreen.html
+++ b/force-app/main/default/lwc/eMS_LM_LeaveApproveRejectScreen/eMS_LM_LeaveApproveRejectScreen.html
@@ -111,9 +111,9 @@
 			</section>
 			<div key={leave.Id} class="slds-backdrop slds-backdrop_open"></div>
 		</template>
-				<div class="slds-p-around_x-small textAlign">
+				<!--div class="slds-p-around_x-small textAlign">
 					<button class="slds-button " onclick={handleApproveAllNavigation} if:true={isViewAll}> View All</button>
-		</div>
+		</div-->
 		
 	</lightning-card>
 
