--- a/force-app/main/default/lwc/eMS_LM_ApplyNew/eMS_LM_ApplyNew.html
+++ b/force-app/main/default/lwc/eMS_LM_ApplyNew/eMS_LM_ApplyNew.html
@@ -3,19 +3,26 @@
   <!--lightning-card-->
     <div slot="actions">
       <span>
-        <!--lightning-button variant="brand-outline" label="Apply New"  onclick={handleOnselect}></lightning-button-->
-        <lightning-button-menu  alternative-text="Show menu" label="Apply New" text="Apply New"
+        
+        <lightning-button variant="brand-outline" label="Apply New"  onclick={firsthandle}></lightning-button>
+      
+        <!--lightning-button-menu  alternative-text="Show menu" label="Apply New" text="Apply New"
           variant="brand-outline" onselect={handleOnselect}>
           <lightning-menu-item value="Leave" label="Leave"></lightning-menu-item>
           <lightning-menu-item value="Work From Home" label="Work From Home"></lightning-menu-item>
-        </lightning-button-menu>
+        </lightning-button-menu -->
     </span> 
-    </div>        
+    </div> 
     <!--/lightning-card-->
     <template if:true={check}>
       <c-e-m-s-_-l-m-_-apply-leave ongetlvalue={getlvalue}></c-e-m-s-_-l-m-_-apply-leave>
     </template>
+
     <template if:true={check1}>
       <c-e-m-s-_-l-m-_-w-f-h ongethvalue={gethvalue}></c-e-m-s-_-l-m-_-w-f-h>
-    </template>  
+    </template>
+
+    <template if:true={isModalOpen}>
+        <c-e-m-s-_-l-m-_-leaveoption ongetclosevalue={getclosevalue} ongetsearchvalue={getleavechecktrue} ongetsearchwfh={getwfhchcktrue}></c-e-m-s-_-l-m-_-leaveoption>
+    </template> 
 </template>
