--- a/force-app/main/default/lwc/eMS_LM_ApplyNew/eMS_LM_ApplyNew.html
+++ b/force-app/main/default/lwc/eMS_LM_ApplyNew/eMS_LM_ApplyNew.html
@@ -3,10 +3,10 @@
   <!--lightning-card-->
     <div slot="actions">
       <span>
-        
-        <lightning-button variant="brand-outline" label="Apply New"  onclick={firsthandle}></lightning-button>
+        <button class="slds-button slds-button_neutral" onclick={firsthandle} style="width:250px" >Apply New</button>       
       
-        <!--lightning-button-menu  alternative-text="Show menu" label="Apply New" text="Apply New"
+        <!--<lightning-button variant="brand-outline" label="Apply New" onclick={firsthandle}></lightning-button>
+          lightning-button-menu  alternative-text="Show menu" label="Apply New" text="Apply New"
           variant="brand-outline" onselect={handleOnselect}>
           <lightning-menu-item value="Leave" label="Leave"></lightning-menu-item>
           <lightning-menu-item value="Work From Home" label="Work From Home"></lightning-menu-item>
