--- a/force-app/main/default/lwc/gridHomePage/gridHomePage.html
+++ b/force-app/main/default/lwc/gridHomePage/gridHomePage.html
@@ -4,14 +4,13 @@
 	<div class="slds-grid slds-gutters slds-card">
 		
 		<div class="slds-col">
-			
-			<c-recent-request-tile></c-recent-request-tile>
 			<c-time-sheet-tile></c-time-sheet-tile>
+			<c-recent-request-tile></c-recent-request-tile>
 		</div>
 		<div class="slds-col">
 			<c-assignment-tile></c-assignment-tile>
+			<c-upcoming-holiday-tile></c-upcoming-holiday-tile>
 			<c-leave-management-_-tile> </c-leave-management-_-tile>
-			
 		</div>
 		<div class="slds-col">
 		
