--- a/force-app/main/default/lwc/timeSheetTile/timeSheetTile.html
+++ b/force-app/main/default/lwc/timeSheetTile/timeSheetTile.html
@@ -47,9 +47,11 @@
                             </template>
                         </tbody>
                         </table>
+                        <footer class="slds-modal__footer">
                         <div class="uiOutputText footer" style="padding:10px;" >
                         <center> <a href=""  ><font class="uiOutputText" onclick={handleClick}>View All Timesheets</font></a> </center>
                         </div>
+                        </footer>
                         
                 </diV>
                 </template>
