--- a/force-app/main/default/lwc/leaveManagement_Tile/leaveManagement_Tile.html
+++ b/force-app/main/default/lwc/leaveManagement_Tile/leaveManagement_Tile.html
@@ -1,28 +1,43 @@
 <template>
-	<div class="homeCard slds-m-around_xxx-small iconContainer">
-		<lightning-card variant="Narrow">
-			<div class="text-helpicon-container slds-p-left_small ">
-				<lightning-icon icon-name='action:defer' alternative-text='defer' size='medium' title='defer'>
-				</lightning-icon>
-				<div class="total-leave-balance slds-text-title_bold" onclick={handleLMNavigation}>Total Leave Balance
-				</div>
-				<lightning-helptext content={contextText} class="help-icon">
-				</lightning-helptext>
-			</div>
-			<div class="slds-text-title_bold  slds-p-around_x-small slds-align_absolute-center slds-text-heading_large fontsize"
-				onclick={handleLMNavigation}>
-				{leaveBalanceData}
-			</div>
+	<div class="homeCard">
+		<lightning-card>
+			<div class="childparent" >
+                    <div class="childimage">
+                      <div class="profile-picture">
+                            <lightning-icon icon-name='action:defer' alternative-text='defer' size='large' title='defer'>
+			            	</lightning-icon>
+                        </div>
+                    </div>
+                    <div class="childtext">
+                       <font size="4" ><b>Total Leave Balance <lightning-helptext content={contextText} class="help-icon">
+				      </lightning-helptext></b></font> </br>
+					  <div class="childparent" >
+						   <div class="childtext">
+                       <font size="8" > <b> {leaveBalanceData} </b> </font>
+                       <br/>
+						   </div>
+						    <div class="childimage" style="align:right">
+								 <c-e-m-s-_-l-m-_-apply-new></c-e-m-s-_-l-m-_-apply-new>
+						    </div>
+					  </div>
+                    </div>
+                </div>
 
-			<div class="slds-p-around_x-small firstBox">
+			<div>
 				<c-e-m-s-_-l-m-_-leave-history>
 				</c-e-m-s-_-l-m-_-leave-history>
 			</div>
-			<div class="slds-p-around_xx-small secondBox">
+			<div>
+				<footer class="slds-modal__footer">
+					<!---->
+					
+				<center> 	<a href="#" onclick={handleLMNavigation} > View All My Request</a> </center>
+				<!--	 -->
+				</footer>
 				<!--div class="slds-text-title_bold  slds-p-around_x-small" onclick={handleLMNavigation}>
 					Apply New
 				</div-->
-				<c-e-m-s-_-l-m-_-apply-new></c-e-m-s-_-l-m-_-apply-new>
+				
 			</div>
 		</lightning-card>
 	</div>
