--- a/force-app/main/default/lwc/upcomingHolidayTile/upcomingHolidayTile.html
+++ b/force-app/main/default/lwc/upcomingHolidayTile/upcomingHolidayTile.html
@@ -2,25 +2,37 @@
 
     <div class="homeCard">
     <lightning-card>
-      <div style="padding-left:10px;">   <lightning-icon icon-name="action:map" size="x-small" alternative-text="Internal" title="Internal">  </lightning-icon> <font size="5"  > &nbsp;&nbsp;<b>Upcoming Holidays </b> </font> <br/><br/> </div>
+        <div class="childparent" >
+           <div class="childtext">
+      <div style="padding-left:0px;"> 
+          <lightning-icon icon-name="action:map" size="x-small" alternative-text="Internal" title="Internal">  </lightning-icon>
+           <font size="4"  > &nbsp;&nbsp;<b>Upcoming Holidays </b> </font> <br/><br/>
+            </div>
+           </div>
+            <div class="childimage">
+            <lightning-combobox
+            name="location"
+            label=""
+            value={value}
+            placeholder="Select Location"
+            options={mapdata}
+            onchange={handleChange} ></lightning-combobox>
+            </div>
+        </div>
   <center><div class="table-container"><table>
     <thead>
       <tr>
-        <th>Start Date</th>
-        <th>Days</th>
-        <th>Status</th>
-        <th>Type</th>
+        <th>Holiday</th>
+        <th>Date</th>
+        <th>Day</th>
       </tr>
     </thead>
     <tbody>
       <template for:each={holidaydata} for:item="row">
         <tr key={row.id} tabindex="0"  onclick={handleRowClick} onkeydown={handleRowKeyDown}>
-          <td>
-              <lightning-formatted-date-time value={row.holidayDate}> </lightning-formatted-date-time>
-              </td>
-          <td>{row.duration}</td>
+          <td>{row.holidayType}</td>
+          <td><lightning-formatted-date-time value={row.holidayDate}> </lightning-formatted-date-time></td>
           <td>{row.status}</td>
-           <td>{row.holidayType}</td>
         </tr>
       </template>
     </tbody>
