Feb 21 early deployment

--- a/force-app/main/default/lwc/leaveManagement_Tile/leaveManagement_Tile.html
+++ b/force-app/main/default/lwc/leaveManagement_Tile/leaveManagement_Tile.html
@@ -16,7 +16,7 @@
                        <font size="8" > <b> {leaveBalanceData} </b> </font>
                        <br/>
 						   </div>
-						    <div class="childimage" style="align:right">
+						    <div class="childimage slds-float_left">
 								 <c-e-m-s-_-l-m-_-apply-new></c-e-m-s-_-l-m-_-apply-new>
 						    </div>
 					  </div>
