--- a/force-app/main/default/lwc/eMS_LM_ApplyLeave/eMS_LM_ApplyLeave.html
+++ b/force-app/main/default/lwc/eMS_LM_ApplyLeave/eMS_LM_ApplyLeave.html
@@ -3,12 +3,14 @@
 	<div class="slds-box slds-theme_shade">
 		<div class="slds-modal slds-fade-in-open slds-backdrop">
 			<div class="slds-modal__container">
-				<div class="slds-modal__header">
+				<div  class="slds-modal__header">
+				<div>
 					<lightning-button-icon icon-name="utility:close" alternative-text="Close" size="large"
 						variant="bare-inverse" onclick={closeme} class="slds-modal__close">
 					</lightning-button-icon>
 					<h1 id="modal-heading-02" class="slds-modal__title slds-hyphenate">Apply Leave</h1>
-					<div class="slds-modal__content slds-var-p-around_medium" id="modal-content-id-1">
+				</div>
+					<div class="slds-modal__content slds-var-p-around_medium text-align: left;" id="modal-content-id-1" style="color:black">
 						<lightning-layout multiple-rows>
 							<lightning-messages></lightning-messages>
 							<lightning-layout-item padding="around-small" size="12">
@@ -52,7 +54,7 @@
 							</lightning-layout-item>
 							<lightning-layout-item padding="around-small" size="12">
 								<div>
-									<lightning-input type="text" label="Reason" value={reason} onchange={reasonChange}>
+									<lightning-input type="text" required label="Reason" value={reason} onchange={reasonChange}>
 									</lightning-input>
 								</div>
 							</lightning-layout-item>
@@ -82,19 +84,17 @@
 							</lightning-layout-item>
 
 							<lightning-layout-item padding="around-small" size="6">
-
-
 								<div>
-									<lightning-button variant="destructive" label="Cancel" title="Destructive action"
-										onclick={closeme} class="slds-var-m-left_x-small"></lightning-button>
+								<lightning-button variant="destructive" label="Cancel" title="Destructive action"
+										onclick={closeme} class="slds-var-m-left_x-small"></lightning-button>	
 								</div>
 
 							</lightning-layout-item>
 							<lightning-layout-item padding="around-small" size="6">
 								<div>
-										<lightning-button variant="brand" label="Submit" title="Primary action"
+									<lightning-button variant="brand" label="Submit" title="Primary action"
 										onclick={submitme} disabled={submitcheck} class="slds-var-m-left_x-small">
-									</lightning-button>
+									</lightning-button>	
 								</div>
 							</lightning-layout-item>
 						</lightning-layout>
