--- a/force-app/main/default/lwc/leaveManagement_Tile/leaveManagement_Tile.html
+++ b/force-app/main/default/lwc/leaveManagement_Tile/leaveManagement_Tile.html
@@ -12,12 +12,12 @@
                        <font size="4" ><b>Total Leave Balance <lightning-helptext content={contextText} class="help-icon">
 				      </lightning-helptext></b></font> </br>
 					  <div class="childparent" >
-						   <div class="childtext">
-                       <font size="8" > <b> {leaveBalanceData} </b> </font>
-                       <br/>
+						   <div class="childtext2">
+                       <font size="8" > <b> {leaveBalanceData} </b> </font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <c-e-m-s-_-l-m-_-apply-new istile="true"></c-e-m-s-_-l-m-_-apply-new>
+                       
 						   </div>
-						    <div class="childimage slds-float_left">
-								 <c-e-m-s-_-l-m-_-apply-new></c-e-m-s-_-l-m-_-apply-new>
+						    <div class="childimage2">
+								
 						    </div>
 					  </div>
                     </div>
